write other tests
